update UI product detail, shop

--- a/admin/src/app/pages/products/product-list/product-list.component.html
+++ b/admin/src/app/pages/products/product-list/product-list.component.html
@@ -11,6 +11,7 @@
             <nb-select-label>
                 Number Of Item: {{ numberOfItem }}
             </nb-select-label>
+            <nb-option value="5">5</nb-option>
             <nb-option value="10">10</nb-option>
             <nb-option value="20">20</nb-option>
             <nb-option value="50">50</nb-option>
