--- a/demo28/src/app/pages/home/index/index.component.html
+++ b/demo28/src/app/pages/home/index/index.component.html
@@ -145,98 +145,91 @@
       <div class="row">
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
-            <div class="cat-image">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'meat'}"><molla-image
-                  src="assets/images/home/categories/1.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
+            <div class="cat-image" style="border-radius: 50%; overflow: hidden">
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'flowering'}">
+                <molla-image src="assets/images/home/categories/1.jpg" width="137" height="137" fixedPt="137px"></molla-image>
+              </a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'meat'}" class="cat-title">Meat</a>
-              <h4 class="cat-count letter-spacing-normal d-block font-weight-light">1 Product</h4>
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'flowering'}" class="cat-title">Flowering</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
-            <div class="cat-image">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'fruit'}"><molla-image
+            <div class="cat-image" style="border-radius: 50%; overflow: hidden">
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'non-flowering'}"><molla-image
                   src="assets/images/home/categories/2.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'fruit'}" class="cat-title">Fruits</a>
-              <h4 class="cat-count letter-spacing-normal d-block font-weight-light">1 Product</h4>
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'non-flowering'}" class="cat-title">Non-flowering</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
-            <div class="cat-image">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'bakery'}"><molla-image
-                  src="assets/images/home/categories/3.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
+            <div class="cat-image" style="border-radius: 50%; overflow: hidden">
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'indoor'}">
+                <molla-image src="assets/images/home/categories/3.jpg" width="137" height="137" fixedPt="137px"></molla-image>
+              </a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'bakery'}" class="cat-title">Bakery</a>
-              <h4 class="cat-count letter-spacing-normal d-block font-weight-light">2 Products</h4>
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'indoor'}" class="cat-title">Indoor</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
-            <div class="cat-image">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'vegetable'}"><molla-image
+            <div class="cat-image" style="border-radius: 50%; overflow: hidden">
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'outdoor'}"><molla-image
                   src="assets/images/home/categories/4.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'vegetable'}" class="cat-title">Vegetable</a>
-              <h4 class="cat-count letter-spacing-normal d-block font-weight-light">5 Products</h4>
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'outdoor'}" class="cat-title">Outdoor</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
-            <div class="cat-image">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'seafood'}"><molla-image
+            <div class="cat-image" style="border-radius: 50%; overflow: hidden">
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'succulent'}"><molla-image
                   src="assets/images/home/categories/5.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'seafood'}" class="cat-title">Seafood</a>
-              <h4 class="cat-count letter-spacing-normal d-block font-weight-light">3 Products</h4>
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'succulent'}" class="cat-title">Succulent</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
-            <div class="cat-image">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'drinks'}"><molla-image
+            <div class="cat-image" style="border-radius: 50%; overflow: hidden">
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'soil'}"><molla-image
                   src="assets/images/home/categories/6.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'drinks'}" class="cat-title">Drinks</a>
-              <h4 class="cat-count letter-spacing-normal d-block font-weight-light">1 Product</h4>
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'soil'}" class="cat-title">Soil</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
-            <div class="cat-image">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'drinks'}"><molla-image
+            <div class="cat-image" style="border-radius: 50%; overflow: hidden">
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'fertilizers'}"><molla-image
                   src="assets/images/home/categories/7.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'drinks'}" class="cat-title">Dairy &amp;
-                Cheese</a>
-              <h4 class="cat-count letter-spacing-normal d-block font-weight-light">1 Product</h4>
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'fertilizers'}" class="cat-title">Fertilizers</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
-            <div class="cat-image">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'wine'}"><molla-image
+            <div class="cat-image" style="border-radius: 50%; overflow: hidden">
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'pesticides'}"><molla-image
                   src="assets/images/home/categories/8.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{category: 'wine'}" class="cat-title">Wine</a>
-              <h4 class="cat-count letter-spacing-normal d-block font-weight-light">1 Product</h4>
+              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'pesticides'}" class="cat-title">Pesticides</a>
             </div>
           </div>
         </div>
