--- a/demo28/src/app/pages/product/shared/details/product-detail/product-detail.component.html
+++ b/demo28/src/app/pages/product/shared/details/product-detail/product-detail.component.html
@@ -7,52 +7,81 @@
       <span class="tooltip-text">{{ product.avgRating.toFixed(2) }}</span>
     </div>
     <span class="ratings-text">( {{ product.totalRating }} Reviews )</span>
+    <span class="ratings-text">( {{ product.totalSold }} Sold )</span>
+
   </div>
 
   <div class="product-price">
-    <span class="out-price">11$</span>
-  </div>
-
-  <ng-template #elseBlock>
-    <div class="product-price" *ngIf="minPrice == maxPrice else elseBlock">11</div>
+    <ng-container *ngIf="hasOnlyOnePrice; else elseBlock">
+      <ng-container *ngIf="product.productSale === null; else discountBlock">
+        {{ product.maxPrice | currency: 'USD'}}
+      </ng-container>
+      <ng-template #discountBlock>
+        <span style="text-decoration: line-through; font-weight: bold; color: grey">
+          {{ product.maxPrice | currency: 'USD' }}
+        </span>
+        <span>
+          {{ " - "}}
+        </span>
+        <span style="font-weight: bold">
+          {{
+            (product.productSale.productSaleType.typeName == 'Fixed' ?
+              product.minPrice - product.productSale.discount :
+              product.minPrice * (1 - product.productSale.discount/100)) | currency: 'USD'
+          }}
+        </span>
+      </ng-template>
+    </ng-container>
     <ng-template #elseBlock>
-      <!-- <div class="product-price" *ngIf="product.variants.length == 0 else elseBlock">
-        <span class="new-price">${{ minPrice.toFixed(2) }}</span>
-        <span class="old-price">${{ maxPrice.toFixed(2) }}</span>
-      </div>
-      <ng-template #elseBlock>
-        <div class="product-price">${{minPrice.toFixed(2)}}&ndash;${{maxPrice.toFixed(2)}}</div>
-      </ng-template> -->
+      <ng-container *ngIf="product.productSale === null; else discountBlock2">
+        <span style="font-weight: bold">
+          {{product.minPrice | currency: 'USD'}}&ndash;{{product.maxPrice | currency: 'USD'}}
+        </span>
+      </ng-container>
+      <ng-template #discountBlock2>
+        <span style="text-decoration: line-through; font-weight: bold; color: grey">
+          {{product.minPrice | currency: 'USD'}}&ndash;{{product.maxPrice | currency: 'USD'}}
+        </span>
+        <div class=""></div>
+        <span style="font-weight: bold">
+          {{
+            (product.productSale.productSaleType.typeName == 'Fixed' ?
+              (product.minPrice - product.productSale.discount < 0 ? 0 : product.minPrice - product.productSale.discount)  :
+              product.minPrice * (1 - product.productSale.discount/100)) | currency: 'USD'
+          }}
+        </span>
+        <span>
+          {{ " - "}}
+        </span>
+        <span style="font-weight: bold">
+          {{
+            (product.productSale.productSaleType.typeName == 'Fixed' ?
+              (product.maxPrice - product.productSale.discount < 0 ? 0 : product.maxPrice - product.productSale.discount)  :
+              product.maxPrice * (1 - product.productSale.discount/100)) | currency: 'USD'
+          }}
+        </span>
+      </ng-template>
     </ng-template>
-  </ng-template>
+  </div>
 
   <div class="product-content">
-    <p>{{ product.description }}</p>
+    <p [innerHTML]="product.description"></p>
   </div>
 
-  <div *ngIf="product.productVariants.length > 1">
-
+  <div *ngIf="product.productVariants.length > 0">
     <div class="details-filter-row details-row-size">
       <label for="size">Size:</label>
       <div class="select-custom">
-        <select name="size" id="size" class="form-control" [value]="selectedVariant.size" (change)="selectSize($event)">
-          <option value="" [selected]="'' == selectedVariant.size">Select a size</option>
-          <option [value]="item.size" *ngFor="let item of sizeArray" [selected]="item.size == selectedVariant.size">{{
-            item.size }}</option>
+        <select name="size" id="size" class="form-control" [(ngModel)]="selectedVariant"
+          (ngModelChange)="selectVariant($event)">
+          <option value="">Select a size</option>
+          <option [ngValue]="variant" *ngFor="let variant of product.productVariants">
+            {{ variant.productSize.sizeName }}
+          </option>
         </select>
       </div>
-
-      <a href="javascript:;" class="size-guide mr-4"><i class="icon-th-list"></i>size guide</a>
-      <a href="javascript:;" (click)="clearSelection()"
-        *ngIf="selectedVariant.color || selectedVariant.size != ''">clear</a>
     </div>
   </div>
-
-  <!-- <div class="variation-price" style="display: none;">
-    <div class="product-price">
-      ${{ selectedVariant.price ? selectedVariant.price.toFixed( 2 ) : 0 }}
-    </div>
-  </div> -->
 
   <div class="details-filter-row details-row-size">
     <label for="qty">Qty:</label>
@@ -61,10 +90,7 @@
   </div>
 
   <div class="product-details-action">
-    <!-- <a href="javascript:;" class="btn-product btn-cart"
-      [class.btn-disabled]="!cartService.canAddToCart( product, qty ) || ( product.variants.length > 0 && !( selectedVariant.color && selectedVariant.size != '' ) )"
-      (click)="addCart( $event, 0 )"><span>add to cart</span></a> -->
-    <a href="javascript:;" class="btn-product btn-cart" (click)="addCart( $event, 0 )"><span>add to cart</span></a>
+    <a href="javascript:;" class="btn-product btn-cart" (click)="addCart( $event )"><span>add to cart</span></a>
 
 
 
@@ -84,6 +110,14 @@
           product.catalog.catalogName
           }}</a></span>
     </div>
+    <div class="product-cat w-100 text-truncate">
+      <span>Level of Difficulty in Growing Plants:</span>
+      <span>
+        <a [routerLink]="['/shop/sidebar/list']" [queryParams]="{level: product.plantingDifficultyLevel.level}">
+          {{product.plantingDifficultyLevel.level}}
+        </a>
+      </span>
+    </div>
 
     <div class="social-icons social-icons-sm">
       <span class="social-label">Share:</span>
@@ -93,62 +127,4 @@
       <a href="javascript:;" class="social-icon" title="Pinterest"><i class="icon-pinterest"></i></a>
     </div>
   </div>
-  <!-- <div class="sticky-bar d-none">
-    <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <figure class="product-media">
-            <a [routerLink]="['/product/default/']">
-              <molla-image [src]="PRODUCT_IMAGE_DIRECTORY + product.imageUrls[0]" alt="Product" class="product-image">
-              </molla-image>
-            </a>
-          </figure>
-          <h3 class="product-title">
-            <a [routerLink]="['/product/default/']">{{ product.productName }}</a>
-          </h3>
-        </div>
-        <div class="col-6 justify-content-end">
-          <div class="product-price" *ngIf="selectedVariant.color && selectedVariant.size != '' else variationPrice">
-            ${{ selectedVariant.price ? selectedVariant.price.toFixed( 2 ) : 0 }}
-          </div>
-          <ng-template #variationPrice>
-            <div class="product-price" *ngIf="!product.stock || product.stock == 0 else elseBlock">
-              <span class="out-price">${{ product.price.toFixed(2) }}</span>
-            </div>
-
-            <ng-template #elseBlock>
-              <div class="product-price" *ngIf="minPrice == maxPrice else elseBlock">
-                ${{ minPrice.toFixed(2) }}</div>
-              <ng-template #elseBlock>
-                <div class="product-price" *ngIf="product.variants.length == 0 else elseBlock">
-                  <span class="new-price">${{ minPrice.toFixed(2) }}</span>
-                  <span class="old-price">${{ maxPrice.toFixed(2) }}</span>
-                </div>
-                <ng-template #elseBlock>
-                  <div class="product-price">${{minPrice.toFixed(2)}}&ndash;${{maxPrice.toFixed(2)}}
-                  </div>
-                </ng-template>
-              </ng-template>
-            </ng-template>
-          </ng-template>
-
-          <molla-quantity-input [max]="product.stock" (changeQty)="onChangeQty2( $event )" [value]="qty2">
-          </molla-quantity-input>
-
-          <div class="product-details-action">
-            <a href="javascript:;" class="btn-product btn-cart"
-              [class.btn-disabled]="!cartService.canAddToCart( product, qty2 ) || ( product.variants.length > 0 && !( selectedVariant.color && selectedVariant.size != '' ) )"
-              (click)="addCart( $event, 1 )"><span>add to cart</span></a>
-
-            <div class="details-action-wrapper ml-0">
-              <a href="javascript:;" class="btn-product btn-wishlist" [class.added-to-wishlist]="isInWishlist()"
-                (click)="addToWishlist($event)">
-                <span>{{ isInWishlist() ? 'go' : 'add' }} to wishlist</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
 </div>
