--- a/demo28/src/app/pages/product/shared/info-tabs/info-new/info-new.component.html
+++ b/demo28/src/app/pages/product/shared/info-tabs/info-new/info-new.component.html
@@ -25,44 +25,17 @@
     </li>
     <li ngbNavItem>
       <a ngbNavLink>
-        Additional information
+        Care Guide
       </a>
       <ng-template ngbNavContent>
-        <div class="product-desc-content">
-          <h3>Information</h3>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis
-            eros. Nullam malesuada erat ut turpis. Suspendisse urna viverra non, semper suscipit, posuere a,
-            pede. Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci.
-          </p>
+        <molla-accordion [adClass]="accordion.adClass">
+          <molla-card *ngFor="let card of accordion.cards; let isFirst = first" [adClass]="accordion.cardAclass"
+            [title]="card.title"
+            [icon]="accordion.showIcon? card.icon : null" [show]="isFirst ? true : false">
 
-          <h3 class="pt-2">Fabric & care</h3>
-          <ul>
-            <li>Faux suede fabric</li>
-            <li>Gold tone metal hoop handles.</li>
-            <li>RI branding</li>
-            <li>Snake print trim interior </li>
-            <li>Adjustable cross body strap</li>
-            <li> Height: 31cm; Width: 32cm; Depth: 12cm; Handle Drop: 61cm</li>
-          </ul>
-
-          <h3>Size</h3>
-          <p>one size</p>
-        </div>
-      </ng-template>
-    </li>
-    <li ngbNavItem>
-      <a ngbNavLink>
-        Shipping & Returns
-      </a>
-      <ng-template ngbNavContent>
-        <div class="product-desc-content">
-          <h3>Delivery & returns</h3>
-          <p>We deliver to over 100 countries around the world. For full details of the delivery options we
-            offer, please view our <a href="javascript:;">Delivery information</a><br>
-            We hope you’ll love every purchase, but if you ever need to return an item you can do so within
-            a month of receipt. For full details of how to make a return, please view our <a href="javascript:;">Returns
-              information</a></p>
-        </div>
+            {{ card.body }}
+          </molla-card>
+        </molla-accordion>
       </ng-template>
     </li>
     <li ngbNavItem>
