--- a/demo28/src/app/pages/shop/sidebar/sidebar.component.html
+++ b/demo28/src/app/pages/shop/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
           <div class="toolbox">
             <div class="toolbox-left">
               <div class="toolbox-info">
-                Showing 123
+                Showing
                 <span>{{ products.length }} of {{ totalCount }}</span> Products
               </div>
             </div>
@@ -41,54 +41,6 @@
                     <option value="new">Date</option>
                   </select>
                 </div>
-              </div>
-
-              <div class="toolbox-layout">
-                <a routerLink="/shop/sidebar/list" queryParamsHandling="merge" class="btn-layout"
-                  routerLinkActive="active">
-                  <svg width="16" height="10">
-                    <rect x="0" y="0" width="4" height="4" />
-                    <rect x="6" y="0" width="10" height="4" />
-                    <rect x="0" y="6" width="4" height="4" />
-                    <rect x="6" y="6" width="10" height="4" />
-                  </svg>
-                </a>
-
-                <a routerLink="/shop/sidebar/2cols" queryParamsHandling="merge" class="btn-layout"
-                  routerLinkActive="active">
-                  <svg width="10" height="10">
-                    <rect x="0" y="0" width="4" height="4" />
-                    <rect x="6" y="0" width="4" height="4" />
-                    <rect x="0" y="6" width="4" height="4" />
-                    <rect x="6" y="6" width="4" height="4" />
-                  </svg>
-                </a>
-
-                <a routerLink="/shop/sidebar/3cols" queryParamsHandling="merge" class="btn-layout"
-                  routerLinkActive="active">
-                  <svg width="16" height="10">
-                    <rect x="0" y="0" width="4" height="4" />
-                    <rect x="6" y="0" width="4" height="4" />
-                    <rect x="12" y="0" width="4" height="4" />
-                    <rect x="0" y="6" width="4" height="4" />
-                    <rect x="6" y="6" width="4" height="4" />
-                    <rect x="12" y="6" width="4" height="4" />
-                  </svg>
-                </a>
-
-                <a routerLink="/shop/sidebar/4cols" queryParamsHandling="merge" class="btn-layout"
-                  routerLinkActive="active">
-                  <svg width="22" height="10">
-                    <rect x="0" y="0" width="4" height="4" />
-                    <rect x="6" y="0" width="4" height="4" />
-                    <rect x="12" y="0" width="4" height="4" />
-                    <rect x="18" y="0" width="4" height="4" />
-                    <rect x="0" y="6" width="4" height="4" />
-                    <rect x="6" y="6" width="4" height="4" />
-                    <rect x="12" y="6" width="4" height="4" />
-                    <rect x="18" y="6" width="4" height="4" />
-                  </svg>
-                </a>
               </div>
             </div>
           </div>
