--- a/demo28/src/app/shared/components/headers/shared/main-menu/main-menu.component.html
+++ b/demo28/src/app/shared/components/headers/shared/main-menu/main-menu.component.html
@@ -13,7 +13,7 @@
       <a routerLink="/pages/contact">Contact</a>
     </li>
 
-    <li [class.active]="current.includes('/elements')">
+    <!-- <li [class.active]="current.includes('/elements')">
       <a routerLink="/elements" class="sf-with-ul">Elements</a>
 
       <ul>
@@ -57,6 +57,6 @@
           <a routerLink="/elements/icon-boxes">Icon Boxes</a>
         </li>
       </ul>
-    </li>
+    </li> -->
   </ul>
 </nav>
