--- a/demo28/src/app/pages/others/about-two/about-two.component.html
+++ b/demo28/src/app/pages/others/about-two/about-two.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <molla-page-header title="About Us 2" subtitle="Pages"></molla-page-header>
+    <molla-page-header title="About Us" subtitle="Pages"></molla-page-header>
     <nav class="breadcrumb-nav border-0 mb-0">
         <div class="container">
             <ol class="breadcrumb">
@@ -99,28 +99,6 @@
                         <span>LETS START WORK</span>
                         <i class="icon-long-arrow-right"></i>
                     </a>
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 offset-lg-1">
-                    <div class="brands-text text-center mx-auto mb-6">
-                        <h2 class="title">The world's premium design brands in one destination.</h2>
-                        <p>Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus
-                            id, mattis vel, nis</p>
-                    </div>
-
-                    <div class="brands-display">
-                        <div class="row justify-content-center">
-                            <div class="col-6 col-sm-4 col-md-3" *ngFor="let brand of brands | slice: 0 : 8">
-                                <a href="javascript:;" class="brand">
-                                    <img [src]="brand.image" alt="Brand Name">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
