--- a/demo28/src/app/@theme/components/headers/shared/header-search/header-search.component.html
+++ b/demo28/src/app/@theme/components/headers/shared/header-search/header-search.component.html
@@ -8,31 +8,49 @@
             <input type="text" class="form-control" name="searchTerm" id="searchTerm" placeholder="Search product ..."
                 required (input)="searchProducts($event)" />
 
-                <div class="live-search-list" *ngIf="searchTerm.length > 2">
+                <div class="live-search-list" *ngIf="searchTerm.length >= 2">
                     <div class="autocomplete-suggestions" *ngIf="suggestions.length > 0" (click)="goProductPage()">
-                        <a [routerLink]="'/product/default/' + product.slug" class="autocomplete-suggestion"
+                        <a [routerLink]="'/product/detail/' + product.slug" class="autocomplete-suggestion"
                             *ngFor="let product of suggestions">
                             <figure class="mb-0 mr-3" style="width: 40px; height: 40px;">
-                                <molla-image [src]="SERVER_URL + product.sm_pictures[0].url" width="40" height="40" alt="Product"
+                                <molla-image [src]="PRODUCT_IMAGE_DIRECTORY + product.imageUrl" width="40" height="40" alt="Product"
                                     class="bg-transparent">
                                 </molla-image>
                             </figure>
 
-                            <div class="search-name" [innerHTML]="matchEmphasize(product.name) | safeContent"></div>
-                            <span class="search-price">
+                            <div class="search-name" [innerHTML]="matchEmphasize(product.productName) | safeContent"></div>
+                            <div class="search-price">
                                 <div class="product-price mb-0" *ngIf="product.minPrice == product.maxPrice else priceBlock">
-                                    ${{ product.minPrice.toFixed(2) }}</div>
+                                  <div *ngIf="product.productSale != null">
+                                    <span class="old-price">
+                                      {{ product.minPrice | currency: "USD" }}
+                                    </span>
+                                    <span class="font-weight-bold">
+                                      {{ calcPriceAfterSale(product.minPrice, product.productSale) | currency: "USD" }}
+                                    </span>
+                                  </div>
+                                  <div *ngIf="product.productSale == null">
+                                    ${{ product.minPrice | currency: "USD" }}
+                                  </div>
+                                </div>
+
                                 <ng-template #priceBlock>
-                                    <div class="product-price mb-0" *ngIf="product.variants.length == 0 else limitBlock">
-                                        <span class="new-price">${{ product.minPrice.toFixed(2) }}</span>
-                                        <span class="old-price">${{ product.maxPrice.toFixed(2) }}</span>
+                                  <div class="product-price mb-0 font-weight-bold" *ngIf="product.productSale == null else saleBlock">
+                                    ${{product.minPrice.toFixed(2)}} - ${{product.maxPrice.toFixed(2)}}
+                                  </div>
+                                  <ng-template #saleBlock>
+                                    <div class="product-price mb-0">
+                                      <div class="old-price mr-3">
+                                        {{ product.minPrice | currency: "USD" }} - {{ product.maxPrice | currency: "USD" }}
+                                      </div>
+                                      <div class="font-weight-bold">
+                                        {{ calcPriceAfterSale(product.minPrice, product.productSale) | currency: "USD" }} -
+                                        {{ calcPriceAfterSale(product.maxPrice, product.productSale) | currency: "USD" }}
+                                      </div>
                                     </div>
-                                    <ng-template #limitBlock>
-                                        <div class="product-price mb-0">${{product.minPrice.toFixed(2)}} -
-                                            ${{product.maxPrice.toFixed(2)}}</div>
-                                    </ng-template>
+                                  </ng-template>
                                 </ng-template>
-                            </span>
+                            </div>
                         </a>
                     </div>
                 </div>
