update product detail

--- a/demo28/src/app/@theme/components/product/product-nine/product-nine.component.html
+++ b/demo28/src/app/@theme/components/product/product-nine/product-nine.component.html
@@ -33,7 +33,7 @@
 
 
         <h3 class="product-title">
-          <a [routerLink]="'/product/default/' + product.slug">{{ product.productName }}</a>
+          <a [routerLink]="'/product/detail/' + product.slug">{{ product.productName }}</a>
         </h3>
 
         <div class="product-content">
