--- a/demo28/src/app/pages/product/shared/gallery/gallery-default/gallery-default.component.html
+++ b/demo28/src/app/pages/product/shared/gallery/gallery-default/gallery-default.component.html
@@ -1,13 +1,18 @@
 <div [class]="'product-gallery ' + adClass">
     <div class="row m-0">
         <figure class="product-main-image">
-            <span class="product-label label-new" *ngIf="product.new">New</span>
-            <span class="product-label label-sale" *ngIf="product.sale_price">Sale</span>
-            <span class="product-label label-top" *ngIf="product.top">Top</span>
-            <span class="product-label label-out" *ngIf="!product.stock || product.stock == 0">Out Of Stock</span>
+          <span class="product-label label-sale" *ngIf="product.sale">
+            Sale
+            {{
+              (product.productSale.productSaleType.typeName == 'Fixed' ?
+              "$" + product.productSale.discount :
+              product.productSale.discount + "%") }}
+            </span>
+          <span class="product-label label-new" *ngIf="product.new_">New</span>
+          <span class="product-label label-top" style="margin-top: 30px" *ngIf="product.top">Top</span>
 
             <molla-image class="d-block position-relative"
-                [src]="SERVER_URL + product.pictures[currentIndex].url"></molla-image>
+                [src]="album[currentIndex].src"></molla-image>
 
             <a href="javascript:;" class="btn-product-gallery" (click)="openLightBox()">
                 <i class="icon-arrows"></i>
@@ -16,8 +21,8 @@
 
         <div id="product-zoom-gallery" class="product-image-gallery">
             <a [ngClass]="'product-gallery-item' + ( i === currentIndex ? ' active' : '' )" href="#"
-                (click)="changeImage( $event, i )" *ngFor="let item of product.pictures; let i = index;">
-                <molla-image [src]="SERVER_URL + product.sm_pictures[i].url" alt="Product side" class="product-image">
+                (click)="changeImage( $event, i )" *ngFor="let img of album; let i = index;">
+                <molla-image [src]="img.src" alt="Product side" class="product-image">
                 </molla-image>
             </a>
         </div>
